Fix mobile overlay
Fixed a bug with iOS safari causing text to be unreadable

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -664,10 +664,10 @@ p ~ section {
 }
 
 .overlay-menu {
-    position: fixed;
+    position: relative;
     /* transform: translateY(-50%); */
     text-align: left;
-    top: 60vh;
+    /* top: 50vh; */
     left: 5vw;
 }
 
@@ -676,7 +676,8 @@ p ~ section {
     padding: 0;
     margin: 0 auto;
     display: inline-block;
-    position: absolute;
+    position: relative;
+
     line-height: 110%;
 }
 
@@ -722,10 +723,13 @@ p ~ section {
 .hero-wrapper {
     align-items: flex-end;
     display: flex;
+    height: 100%;
     height: 100vh;
+    height: 100dvh;
     min-height: 300px;
     justify-content: space-between;
     padding-bottom: 1rem;
+    
 }
 
 .hero-stickers {
@@ -740,6 +744,7 @@ p ~ section {
     position: absolute;
     width: 100vw;
     height: 100vh;
+    height: 100dvh;
 }
 
 .hero-circle {
